--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,14 @@
-<div class="navbarContainer" *ngIf="showNavbar">
-    <p>{{user.name}}</p>
-    <button (click)="logout()">log out</button>
-
+<div>
+    <div class="navbarContainer" *ngIf="showNavbar">
+        <p>{{user.name}}</p>
+        <button (click)="logout()">log out</button>
+    </div>
+    <div class="navbarContainer" *ngIf="showNavbar">
+        <button (click)="shortRest()">Short Rest</button>
+        <button (click)="longRest()">Long Rest</button>
+    </div>
 </div>
+
 <div class="toggleNavbar" (click)="toggleNavbar()">
     <span class="material-icons navbarIcon">
         reorder
