--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,8 +7,8 @@
 }
 
 .content,#content {
-    display: flex;
-    flex: 1;
+    /* display: flex;
+    flex: 1; */
 
     /* padding: "0px 50px 50px 50px" */
 }
