--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,6 +6,7 @@
     <div class="navbarContainer" *ngIf="showNavbar">
         <button (click)="shortRest()">Short Rest</button>
         <button (click)="longRest()">Long Rest</button>
+        <button (click)="addNewSpell()">Add new Spell</button>
     </div>
 </div>
 
