--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,17 +1,20 @@
-<div>
-    <div class="navbarContainer" *ngIf="showNavbar">
-        <p>{{user.name}}</p>
-        <button (click)="logout()">log out</button>
+<div *ngIf="playerHasBeenChosen()">
+    <div>
+        <div class="navbarContainer" *ngIf="showNavbar">
+            <p>{{user.name}}</p>
+            <button (click)="logout()">log out</button>
+        </div>
+        <div class="navbarContainer" *ngIf="showNavbar">
+            <button (click)="shortRest()">Short Rest</button>
+            <button (click)="longRest()">Long Rest</button>
+            <button (click)="addNewSpell()">Add new Spell</button>
+            <mat-slide-toggle (toggleChange)="toggleLoadAllSpells()" [(ngModel)]="loadAllSpells">Load all spells</mat-slide-toggle> {{getAmountOfSpells()}} / {{(eventservice.PlayerCollection.level - 1) * 2 + 6}}
+        </div>
     </div>
-    <div class="navbarContainer" *ngIf="showNavbar">
-        <button (click)="shortRest()">Short Rest</button>
-        <button (click)="longRest()">Long Rest</button>
-        <button (click)="addNewSpell()">Add new Spell</button>
-    </div>
-</div>
 
-<div class="toggleNavbar" (click)="toggleNavbar()">
-    <span class="material-icons navbarIcon">
-        reorder
-    </span>
+    <div class="toggleNavbar" (click)="toggleNavbar()">
+        <span class="material-icons navbarIcon">
+            reorder
+        </span>
+    </div>
 </div>
